--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "next-seo": "^6.8.0",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "prisma": "^6.8.2",
     "react": "^19.0.0",
