--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prisma": "^6.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.4",
     "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^3.0.2",
