--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next build && next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email:dev": "email dev",
+    "email:export": "email export"
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
@@ -40,6 +42,8 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^0.3.3",
+    "@react-email/render": "^1.1.4",
     "@tanstack/react-query": "^5.77.2",
     "@tiptap/extension-image": "^3.0.7",
     "@tiptap/extension-link": "^3.0.7",
@@ -70,10 +74,12 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-email": "^4.2.5",
     "react-hook-form": "^7.56.4",
     "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
+    "resend": "^4.7.0",
     "sonner": "^2.0.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.26.2",
@@ -86,6 +92,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@react-email/preview-server": "^4.2.5",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
