--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "swagger-ui-react": "^5.26.2",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.0",
+    "twilio": "^5.8.0",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.25.34",
@@ -101,6 +102,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/twilio": "^3.19.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
