--- a/package.json
+++ b/package.json
@@ -51,15 +51,18 @@
     "@tanstack/react-query": "^5.77.2",
     "@tiptap/extension-image": "^3.0.7",
     "@tiptap/extension-link": "^3.0.7",
+    "@tiptap/extension-placeholder": "^3.1.0",
     "@tiptap/extension-text-align": "^3.0.7",
     "@tiptap/extension-underline": "^3.0.7",
     "@tiptap/pm": "^3.0.7",
     "@tiptap/react": "^3.0.7",
     "@tiptap/starter-kit": "^3.0.7",
     "@tosspayments/payment-sdk": "^1.9.1",
+    "@types/bcryptjs": "^3.0.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-react": "^5.18.0",
     "@types/uuid": "^10.0.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -69,6 +72,7 @@
     "framer-motion": "^12.17.3",
     "graphql": "^16.11.0",
     "input-otp": "^1.4.2",
+    "jose": "^6.0.12",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-seo": "^6.8.0",
