언어 변역 추가

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "flag-icons": "^7.5.0",
     "framer-motion": "^12.17.3",
     "graphql": "^16.11.0",
     "input-otp": "^1.4.2",
