--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@apollo/client": "^3.13.8",
     "@aws-sdk/client-s3": "^3.850.0",
     "@aws-sdk/s3-request-presigner": "^3.850.0",
+    "@google/genai": "^1.25.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.8.2",
     "@radix-ui/react-accordion": "^1.2.11",
